service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobportal-frontend-service
spec:
  type: NodePort
  selector:
    app: jobportal-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
