ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobportal-ingress
  namespace: jobportal
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-onpremise.chausu.name.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobportal-frontend-service
                port:
                  number: 80
